# alpha-hunter

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  docker.yml
app/: main.py
app/api/: health.py
app/blockchain/: chain_ids.py
app/cli/: main.py
app/collectors/: anthropic_client.py  base.py  dexscreener_client.py  dexscreener_normalizer.py  dexscreener_provider.py  etherscan_client.py  geckoterminal_client.py  geckoterminal_normalizer.py  geckoterminal_provider.py  github_client.py  goplus_client.py  telegram_client.py
app/contracts/: risk_scoring.py
app/core/: cache.py  exceptions.py  locks.py
app/developer/: scoring.py
app/models/: __init__.py  alpha_score.py  chain.py  contract_security.py  developer_activity.py  job_run.py  narrative_classification.py  social_score.py  social_snapshot.py  token.py  token_snapshot.py  wallet.py  wallet_holding.py  whale_event.py
app/narratives/: classifier_prompt.py
app/ranking/: scoring.py
app/repositories/: __init__.py  alpha_score_repository.py  base.py  contract_security_repository.py  developer_activity_repository.py  narrative_repository.py  social_score_repository.py  social_snapshot_repository.py  token_repository.py  token_snapshot_repository.py  wallet_holding_repository.py  wallet_repository.py  whale_event_repository.py
app/scheduler/: execution.py  jobs.py  registry.py  scheduler.py
docker/: docker-compose.yml
frontend/: package-lock.json  package.json  vite.config.ts
scripts/: manual_ingest_check.py
(+189 files in other folders)
