[project]
name = "alpha-hunter"
version = "0.1.0"
description = "AI-powered crypto discovery and alpha-scoring platform"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "structlog>=24.4.0",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",

]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.4",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
    "respx>=0.21.1",   # mocks httpx for tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
addopts = "-v --cov=app --cov-report=term-missing"